@@ -1,3 +1,6 @@
+2004-11-26 Magnus Hagdorn
+ * extractCFstats.py: fixed bug
+
 2004-11-25 Magnus Hagdorn
  * CF_loadfile.py: some minor fixes
  * CF_options.py: added -T switch to specify time slice rather than time
